# TrackCamHub

./: .gitignore  CMakeLists.txt  README.md  main.cpp  package.bat
config/: trackcamhub.ini
docs/: 6010旋转底座通信协议_1206.docx  architecture.md
scripts/: package.ps1
scripts/runtime/: install_service.bat  run_console.bat  trigger_capture.bat  uninstall_service.bat
src/app/: Logger.h  ServiceRunner.cpp  ServiceRunner.h  TrackCamHubApp.cpp  TrackCamHubApp.h
src/config/: AppConfig.cpp  AppConfig.h
src/control/: DirectTriggerServer.cpp  DirectTriggerServer.h
src/serial/: SerialPort.cpp  SerialPort.h  TrackSignalListener.cpp  TrackSignalListener.h
src/thrift/: CameraClient.cpp  CameraClient.h  HubServer.cpp  HubServer.h  SampleReg_Defs.thrift  ThriftClient.h
src/thrift/gen-cpp/: SampleRegLC.cpp  SampleRegLC.h  SampleRegUC.cpp  SampleRegUC.h  SampleReg_Defs_types.cpp  SampleReg_Defs_types.h  SampleReg_Interface_LC_types.h  SampleReg_Interface_UC_types.h
src/workflow/: CameraImageCaptureWorker.cpp  CameraImageCaptureWorker.h  CaptureResultSaver.cpp  CaptureResultSaver.h  CaptureWorkflow.cpp  CaptureWorkflow.h
tools/: TriggerCapture.cpp  simulate_track_serial.py
